tests/snapshots/options__opt_info_inline@002.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --info inline\nafter:\n  @char 'a'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> a                                                                             "
"> a  < 1/3                                                                   0/0"
cursor: (25, 4)
